# sixnimmt

./: .gitignore  LICENSE  README.md
server/: .gitignore  app.py  pyproject.toml
server/sixnimmt/: handler.py  sixnimmt.py
server/tests/: test_sixnimmt.py
